@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<metadata>
+  <groupId>org.apache</groupId>
+  <artifactId>test-SNAPSHOT1</artifactId>
+  <version>2.0.2-SNAPSHOT</version>
+  <versioning>
+    <snapshot>
+      <timestamp>20070310.181613</timestamp>
+
+      <buildNumber>3</buildNumber>
+    </snapshot>
+    <lastUpdated>20070310181754</lastUpdated>
+  </versioning>
+</metadata>
