@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?><metadata>
+  <groupId>org.apache</groupId>
+  <artifactId>test-SNAPSHOT2</artifactId>
+  <version>2.0.2-SNAPSHOT</version>
+  <versioning>
+    <versions>
+      <version>2.0.2-SNAPSHOT</version>
+    </versions>
+
+    <lastUpdated>20070310181754</lastUpdated>
+  </versioning>
+</metadata>
